--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
         <line x1="100%" y1="100%" x2="100%" y="100%" />
         <line x1="0" y1="100%" x2="0" y="100%" />
     </svg>
-    <script src="lol.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
