--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>test</title>
 </head>
 <body>
-    <h1>Test</h1>
+    <h1>nothing here... yet...</h1>
+    <p>check back again on Sep. 7th 2020</p>
+    <p>maybe something will have changed by then...</p>
     <svg>
         <line x1="0" y1="0" x2="0" y="0" />
         <line x1="100%" y1="0" x2="100%" y="0" />
