--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1>nothing here... yet...</h1>
     <p>check back again on Sep. 7th 2020</p>
     <p>maybe something will have changed by then...</p>
+    <p>be sure to do a hard-reload with <kbd>Ctrl + Shift + r</kbd> or <kbd>Shift + F5</kbd></p>
+    <p>note to self: <kbd>Alt + 24..27</kbd> creates these cool arrows ↑ ↓ → ← !!!</p>
     <svg>
         <line x1="0" y1="0" x2="0" y="0" />
         <line x1="100%" y1="0" x2="100%" y="0" />
