--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p>maybe something will have changed by then...</p>
     <p>be sure to do a hard-reload with <kbd>Ctrl + Shift + r</kbd> or <kbd>Shift + F5</kbd></p>
     <p>note to self: <kbd>Alt + 24..27</kbd> creates these cool arrows ↑ ↓ → ← !!!</p>
+    <img src="sexuality_chart-png" alt="You are gay" />
     <svg>
         <line x1="0" y1="0" x2="0" y="0" />
         <line x1="100%" y1="0" x2="100%" y="0" />
