--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <p>be sure to do a hard-reload with <kbd>Ctrl + Shift + r</kbd> or <kbd>Shift + F5</kbd></p>
     <p>note to self: <kbd>Alt + 24..27</kbd> creates these cool arrows ↑ ↓ → ← !!!</p>
     <svg>
-        <line x1="0" y1="0" x2="0" y="0" />
+        <!--<line x1="0" y1="0" x2="0" y="0" />
         <line x1="100%" y1="0" x2="100%" y="0" />
         <line x1="100%" y1="100%" x2="100%" y="100%" />
-        <line x1="0" y1="100%" x2="0" y="100%" />
+        <line x1="0" y1="100%" x2="0" y="100%" />-->
+        <rect x="0" y="0" width="0" height="0" />
     </svg>
     <script src="script.js"></script>
 </body>
