--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Home</h1>
+        <h1>Who am I?</h1>
     </header>
     <main>
         <section id="intro">
@@ -42,7 +42,7 @@
         <header>
             <h1>Settings</h1>
         </header>
-        <input type="checkbox" id="boxEffect" checked>
+        <input type="checkbox" id="boxEffect" onchange="boxEffect()" checked>
         <label title="create a box when the mouse button is held down" for="boxEffect">
             <svg class="checkbox">
                 <rect x="6" y="9" width="30" height="20"></rect>
