--- a/html/looks.html
+++ b/html/looks.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../style.css">
     <script src="../jquery-3.5.1.min.js"></script>
+    <script src="../a076d05399.js"></script>
     <title>Looks</title>
 </head>
 <body>
