--- a/html/looks.html
+++ b/html/looks.html
@@ -13,6 +13,9 @@
 <body>
     <header>
         <h1>How do I look like?</h1>
+        <button id="toggleSettings" onclick="toggleSettings()">
+            <i class="fas fa-cog"></i>
+        </button>
     </header>
     <main>
         <section id="imgs">
