--- a/html/freetime.html
+++ b/html/freetime.html
@@ -13,6 +13,9 @@
 <body>
     <header>
         <h1>What do I do in my free time?</h1>
+        <button id="toggleSettings" onclick="toggleSettings()">
+            <i class="fas fa-cog"></i>
+        </button>
     </header>
     <main>
         <div class="basic">
@@ -88,6 +91,9 @@
     <div id="settings-wrapper">
         <header>
             <h1>Settings</h1>
+            <button id="toggleSettings" onclick="toggleSettings()">
+                <i class="fas fa-times"></i>
+            </button>
         </header>
         <input type="checkbox" id="boxEffect" checked>
         <label title="create a box when the mouse button is held down" for="boxEffect">
