--- a/html/goals.html
+++ b/html/goals.html
@@ -13,6 +13,9 @@
 <body>
     <header>
         <h1>What are my goals?</h1>
+        <button id="toggleSettings" onclick="toggleSettings()">
+            <i class="fas fa-cog"></i>
+        </button>
     </header>
     <main>
         <div id="timepassed"></div>
@@ -39,6 +42,9 @@
     <div id="settings-wrapper">
         <header>
             <h1>Settings</h1>
+            <button id="toggleSettings" onclick="toggleSettings()">
+                <i class="fas fa-times"></i>
+            </button>
         </header>
         <input type="checkbox" id="boxEffect" checked>
         <label title="create a box when the mouse button is held down" for="boxEffect">
