--- a/html/looks.html
+++ b/html/looks.html
@@ -39,6 +39,9 @@
     <div id="settings-wrapper">
         <header>
             <h1>Settings</h1>
+            <button id="toggleSettings" onclick="toggleSettings()">
+                <i class="fas fa-times"></i>
+            </button>
         </header>
         <input type="checkbox" id="boxEffect" checked>
         <label title="create a box when the mouse button is held down" for="boxEffect">
