--- a/html/map.html
+++ b/html/map.html
@@ -13,6 +13,9 @@
 <body>
     <header>
         <h1>Here's a map i made.</h1>
+        <button id="toggleSettings" onclick="toggleSettings()">
+            <i class="fas fa-cog"></i>
+        </button>
     </header>
     <main>
         <svg id="Map">
@@ -63,6 +66,9 @@
     <div id="settings-wrapper">
         <header>
             <h1>Settings</h1>
+            <button id="toggleSettings" onclick="toggleSettings()">
+                <i class="fas fa-times"></i>
+            </button>
         </header>
         <input type="checkbox" id="boxEffect" checked>
         <label title="create a box when the mouse button is held down" for="boxEffect">
