--- a/html/goals.html
+++ b/html/goals.html
@@ -24,9 +24,8 @@
         <div id="diff"></div>
         <input type="range" min="0" max="10000" id="tl-slider" oninput="slide()">
         <h1 class="goal" id="abschluss">Finish my education with success</h1>
-        <!--get a Laptop to use in my dorm<br>
-        successfully finish my education<br><br>
-        find out, how to invest<br>
+        <h2 class="goal" id="laptop">get a Laptop to use in my dorm</h2>
+        <!--find out, how to invest<br>
         invest<br>
         profit-->
     </main>
