--- a/html/goals.html
+++ b/html/goals.html
@@ -38,77 +38,79 @@
             <a class="active" href="goals.html">Goals</a>
         </nav>
     </footer>
-    <div id="settings-wrapper">
+    <div id="settings">
         <header>
             <h1>Settings</h1>
             <button id="toggleSettings" onclick="toggleSettings()">
                 <i class="fas fa-times"></i>
             </button>
         </header>
-        <input type="checkbox" id="lineEffect" onchange="lineEffect()" checked>
-        <label title="show lines that track your mouse" for="lineEffect">
-            <svg class="checkbox">
-                <line class="on" x1="0" y1="0" x2="50" y2="50"></line>
-                <line class="on" x1="0" y1="50" x2="50" y2="0"></line>
-                <polygon points="25,25 35,35 31,35 35,43 33,44 29,36 25,39"></polygon>
-            </svg>
-        </label>
-        <input type="checkbox" id="clickColor" onchange="clickColor()" checked>
-        <label title="change line color on click" for="clickColor">
-            <svg class="checkbox">
-                <line x1="0" y1="0" x2="25" y2="25"></line>
-                <line x1="0" y1="50" x2="25" y2="25"></line>
-                <line x1="50" y1="0" x2="25" y2="25"></line>
-                <line x1="50" y1="50" x2="25" y2="25"></line>
-                <line x1="25" y1="23" x2="27" y2="20"></line>
-                <line x1="27" y1="25" x2="30" y2="27"></line>
-                <line x1="25" y1="27" x2="23" y2="30"></line>
-                <line x1="23" y1="25" x2="20" y2="23"></line>
-                <polygon points="25,25 35,35 31,35 35,43 33,44 29,36 25,39"></polygon>
-            </svg>
-        </label>
-        <input type="checkbox" id="autoColor" onchange="autoColor()" checked>
-        <label title="change line color automatically" for="autoColor">
-            <svg class="checkbox">
-                <line x1="0" y1="0" x2="25" y2="25"></line>
-                <line x1="0" y1="50" x2="25" y2="25"></line>
-                <line x1="50" y1="0" x2="25" y2="25"></line>
-                <line x1="50" y1="50" x2="25" y2="25"></line>
-                <polygon points="25,25 35,35 31,35 35,43 33,44 29,36 25,39"></polygon>
-            </svg>
-        </label>
-        <input type="color" id="setColor" onchange="setColor()" disabled>
-        <label title="set line color" for="setColor" onclick="unlockColor()">
-            <svg class="colorpicker">
-                <line x1="0" y1="0" x2="50" y2="50"></line>
-                <line x1="0" y1="50" x2="50" y2="0"></line>
-            </svg>
-        </label>
-        <input type="checkbox" id="boxEffect" onchange="boxEffect()" checked>
-        <label title="create a box when the mouse button is held down" for="boxEffect">
-            <svg class="checkbox">
-                <rect x="6" y="9" width="30" height="20"></rect>
-                <line class="off" x1="9" y1="7" x2="33" y2="31"></line>
-                <line class="off" x1="9" y1="31" x2="33" y2="7"></line>
-                <polygon points="35,28 45,38 41,38 45,46 43,47 39,39 35,42"></polygon>
-            </svg>
-        </label>
-        <input type="checkbox" id="hideBox" checked>
-        <label title="hide box when mouse button is released" for="hideBox">
-            <svg class="checkbox">
-                <rect x="5" y="10" width="30" height="20"></rect>
-                <polygon points="30,25 40,35 36,35 40,43 38,44 34,36 30,39"></polygon>
-            </svg>
-        </label>
-        <input type="checkbox" id="skipAnim" checked>
-        <label title="header move in animation" for="skipAnim">
-            <svg class="checkbox">
-                <rect x="0" y="0" width="50" height="10"></rect>
-                <rect class="on" x="0" y="0" width="50" height="6"></rect>
-                <text class="on" x="20" y="12">~</text>
-                <text x="20" y="16">~</text>
-            </svg>
-        </label>
+        <div id="settings-wrapper">
+            <input type="checkbox" id="lineEffect" onchange="lineEffect()" checked>
+            <label title="show lines that track your mouse" for="lineEffect">
+                <svg class="checkbox">
+                    <line class="on" x1="0" y1="0" x2="50" y2="50"></line>
+                    <line class="on" x1="0" y1="50" x2="50" y2="0"></line>
+                    <polygon points="25,25 35,35 31,35 35,43 33,44 29,36 25,39"></polygon>
+                </svg>
+            </label>
+            <input type="checkbox" id="clickColor" onchange="clickColor()" checked>
+            <label title="change line color on click" for="clickColor">
+                <svg class="checkbox">
+                    <line x1="0" y1="0" x2="25" y2="25"></line>
+                    <line x1="0" y1="50" x2="25" y2="25"></line>
+                    <line x1="50" y1="0" x2="25" y2="25"></line>
+                    <line x1="50" y1="50" x2="25" y2="25"></line>
+                    <line x1="25" y1="23" x2="27" y2="20"></line>
+                    <line x1="27" y1="25" x2="30" y2="27"></line>
+                    <line x1="25" y1="27" x2="23" y2="30"></line>
+                    <line x1="23" y1="25" x2="20" y2="23"></line>
+                    <polygon points="25,25 35,35 31,35 35,43 33,44 29,36 25,39"></polygon>
+                </svg>
+            </label>
+            <input type="checkbox" id="autoColor" onchange="autoColor()" checked>
+            <label title="change line color automatically" for="autoColor">
+                <svg class="checkbox">
+                    <line x1="0" y1="0" x2="25" y2="25"></line>
+                    <line x1="0" y1="50" x2="25" y2="25"></line>
+                    <line x1="50" y1="0" x2="25" y2="25"></line>
+                    <line x1="50" y1="50" x2="25" y2="25"></line>
+                    <polygon points="25,25 35,35 31,35 35,43 33,44 29,36 25,39"></polygon>
+                </svg>
+            </label>
+            <input type="color" id="setColor" onchange="setColor()" disabled>
+            <label title="set line color" for="setColor" onclick="unlockColor()">
+                <svg class="colorpicker">
+                    <line x1="0" y1="0" x2="50" y2="50"></line>
+                    <line x1="0" y1="50" x2="50" y2="0"></line>
+                </svg>
+            </label>
+            <input type="checkbox" id="boxEffect" onchange="boxEffect()" checked>
+            <label title="create a box when the mouse button is held down" for="boxEffect">
+                <svg class="checkbox">
+                    <rect x="6" y="9" width="30" height="20"></rect>
+                    <line class="off" x1="9" y1="7" x2="33" y2="31"></line>
+                    <line class="off" x1="9" y1="31" x2="33" y2="7"></line>
+                    <polygon points="35,28 45,38 41,38 45,46 43,47 39,39 35,42"></polygon>
+                </svg>
+            </label>
+            <input type="checkbox" id="hideBox" checked>
+            <label title="hide box when mouse button is released" for="hideBox">
+                <svg class="checkbox">
+                    <rect x="5" y="10" width="30" height="20"></rect>
+                    <polygon points="30,25 40,35 36,35 40,43 38,44 34,36 30,39"></polygon>
+                </svg>
+            </label>
+            <input type="checkbox" id="skipAnim" checked>
+            <label title="header move in animation" for="skipAnim">
+                <svg class="checkbox">
+                    <rect x="0" y="0" width="50" height="10"></rect>
+                    <rect class="on" x="0" y="0" width="50" height="6"></rect>
+                    <text class="on" x="20" y="12">~</text>
+                    <text x="20" y="16">~</text>
+                </svg>
+            </label>
+        </div>
     </div>
     <svg id="mouseBox">
         <line x1="0" y1="0" x2="0" y2="0"></line>
