--- a/html/goals.html
+++ b/html/goals.html
@@ -24,10 +24,12 @@
         <div id="diff"></div>
         <input type="range" min="0" max="10000" id="tl-slider" oninput="slide()">
         <h1 class="goal" id="abschluss">Finish my education with success</h1>
-        <h2 class="goal" id="laptop">get a Laptop to use in my dorm</h2>
-        <!--find out, how to invest<br>
-        invest<br>
-        profit-->
+        <h1 class="goal" id="job">Find a Job</h1>
+        <h1 class="goal" id="work">Work</h1>
+        <h2 class="goal" id="laptop">Get a Laptop to use in my dorm</h2>
+        <h2 class="goal" id="invhow">Find out how to invest</h2>
+        <h2 class="goal" id="invest">Invest</h2>
+        <h2 class="goal" id="profit">Profit</h2>
     </main>
     <footer>
         <nav>
