--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div id="myProgress"></div>
                 </div>
             </div>
-            <p>This is just a project I have to do for my School/work/Education place, or whatever it is</p>
+            <p>This is just a project I have to do for my school/work/education place, or whatever it is</p>
             <p>don't judge my bad code, I'm still learning</p>
             <p>also, this website is still WIP, some stuff still doesn't work!</p>
         </section>
