--- a/html/goals.html
+++ b/html/goals.html
@@ -27,7 +27,7 @@
         <h2 class="goal" id="laptop">Get a Laptop to use in my dorm</h2>
         <h2 class="goal" id="invhow">Find out how to invest</h2>
         <h2 class="goal" id="invest">Invest</h2>
-        <h1 class="goal" id="profit">Profit</h1>
+        <h2 class="goal end">Profit</h2>
     </main>
     <footer>
         <nav>
