--- a/html/goals.html
+++ b/html/goals.html
@@ -28,6 +28,11 @@
         <h2 class="goal" id="invhow">Find out how to invest</h2>
         <h2 class="goal" id="invest">Invest</h2>
         <h2 class="goal end">Profit</h2>
+        <h2 class="goal end">Go to mars</h2>
+        <h2 class="goal end">Study Psychology / people / the mind / thoughts / human stuff</h2>
+        <h2 class="goal end">Study Philosophy</h2>
+        <h2 class="goal end">Learn and program AI</h2>
+        <h2 class="goal end">Learn programming mixed with graphic design</h2>
     </main>
     <footer>
         <nav>
