--- a/html/looks.html
+++ b/html/looks.html
@@ -51,7 +51,7 @@
                 </svg>
             </label>
             <input type="checkbox" id="clickColor" onchange="clickColor()" checked>
-            <label title="change line color on click" for="clickColor">
+            <label title="change line color on click" for="clickColor" onclick="unlockLfx()">
                 <svg class="checkbox">
                     <line x1="0" y1="0" x2="25" y2="25"></line>
                     <line x1="0" y1="50" x2="25" y2="25"></line>
@@ -65,7 +65,7 @@
                 </svg>
             </label>
             <input type="checkbox" id="autoColor" onchange="autoColor()" checked>
-            <label title="change line color automatically" for="autoColor">
+            <label title="change line color automatically" for="autoColor" onclick="unlockLfx()">
                 <svg class="checkbox">
                     <line x1="0" y1="0" x2="25" y2="25"></line>
                     <line x1="0" y1="50" x2="25" y2="25"></line>
