--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </svg>
             </label>
             <input type="checkbox" id="hideBox" checked>
-            <label title="hide box when mouse button is released" for="hideBox">
+            <label title="hide box when mouse button is released" for="hideBox" onclick="unlockBfx()">
                 <svg class="checkbox">
                     <rect x="5" y="10" width="30" height="20"></rect>
                     <polygon points="30,25 40,35 36,35 40,43 38,44 34,36 30,39"></polygon>
