--- a/html/goals.html
+++ b/html/goals.html
@@ -33,6 +33,7 @@
         <h2 class="goal end">Study Philosophy</h2>
         <h2 class="goal end">Learn and program AI</h2>
         <h2 class="goal end">Learn programming mixed with graphic design</h2>
+        <h2 class="goal end">Learn more languages (both normal and programming)</h2>
     </main>
     <footer>
         <nav>
