--- a/html/goals.html
+++ b/html/goals.html
@@ -26,7 +26,7 @@
         <h2 class="goal" id="laptop">Get a Laptop to use in my dorm</h2>
         <h2 class="goal" id="invhow">Find out how to invest</h2>
         <h2 class="goal" id="invest">Invest</h2>
-        <h2 class="goal end">Profit</h2>
+        <h2 class="goal" id="profit">Profit</h2>
         <h2 class="goal end">Go to mars</h2>
         <h2 class="goal end">Study Psychology / people / the mind / thoughts / human stuff</h2>
         <h2 class="goal end">Study Philosophy</h2>
