--- a/html/goals.html
+++ b/html/goals.html
@@ -27,7 +27,7 @@
         <h2 class="goal" id="invhow">Find out how to invest</h2>
         <h2 class="goal" id="invest">Invest</h2>
         <h2 class="goal" id="profit">Profit</h2>
-        <h2 class="goal end">Go to mars</h2>
+        <h2 class="goal end">Go to another planet</h2>
         <h2 class="goal end">Study Psychology / people / the mind / thoughts / human stuff</h2>
         <h2 class="goal end">Study Philosophy</h2>
         <h2 class="goal end">Learn and program AI</h2>
