Added "Programming" to things I do

--- a/html/freetime.html
+++ b/html/freetime.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="hobby home" id="games">
                     <h2>Play video games</h2>
-                    <p class="home">Forager</p>
+                    <p class="home">OldSchool RuneScape</p>
                     <p class="home hasinfo" id="goi">Getting over it</p>
                     <p class="info" id="goi">Speedrun PB: 3m:58.222s</p>
                     <p class="info" id="goi">first run took me ~10h</p>
@@ -73,6 +73,10 @@
                     <p class="home dorm">Twitter</p>
                     <p class="home hasinfo" id="pain">paint.net stuff</p>
                     <p class="info" id="pain">I edit my Minecraft ressource pack with that</p>
+                    <p class="home dorm hasinfo" id="prog">Programming</p>
+                    <p class="info" id="prog">mainly Python</p>
+                    <p class="info" id="prog">Java, soon, hopefully</p>
+                    <p class="info" id="prog">to make my own OSRS client</p>
                 </div>
             </div>
         </section>
