--- a/html/freetime.html
+++ b/html/freetime.html
@@ -48,9 +48,10 @@
                     <p class="home dorm ka">Idk, how I should categorize the rest</p>
                     <div class="test"></div>
                 </div>
-                <div class="hobby home" id="games">
+                <div class="hobby home dorm" id="games">
                     <h2>Play video games</h2>
-                    <p class="home">OldSchool RuneScape</p>
+                    <p class="dorm">OldSchool RuneScape</p>
+                    <p class="home">Forager</p>
                     <p class="home hasinfo" id="goi">Getting over it</p>
                     <p class="info" id="goi">Speedrun PB: 3m:58.222s</p>
                     <p class="info" id="goi">first run took me ~10h</p>
