--- a/html/freetime.html
+++ b/html/freetime.html
@@ -19,7 +19,7 @@
         <div class="basic">
             <a href="javascript:hobby()">
                 <fieldset>Spend time with electronic devices
-                    <legend id="hint">click me!</legend>
+                    <legend id="hint">﴾click me!﴿</legend>
                 </fieldset>
             </a>
             <h2 class="desc">basically, if you would bunch it all up together</h2>
