--- a/html/looks.html
+++ b/html/looks.html
@@ -27,7 +27,7 @@
     </main>
     <footer>
         <nav>
-            <a href="../index.html">Home</a>
+            <a href="/">Home</a>
             <a class="active" href="looks.html">Looks</a>
             <a href="map.html">Map</a>
             <a href="freetime.html">Free time</a>
