--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </main>
     <footer>
         <nav>
-            <a class="active" href="index.html">Home</a>
+            <a class="active" href="/">Home</a>
             <a href="html/looks.html">Looks</a>
             <a href="html/map.html">Map</a>
             <a href="html/freetime.html">Free time</a>
