--- a/html/freetime.html
+++ b/html/freetime.html
@@ -84,7 +84,7 @@
     </main>
     <footer>
         <nav>
-            <a href="../index.html">Home</a>
+            <a href="/">Home</a>
             <a href="looks.html">Looks</a>
             <a href="map.html">Map</a>
             <a class="active" href="freetime.html">Free time</a>
