--- a/html/goals.html
+++ b/html/goals.html
@@ -36,7 +36,7 @@
     </main>
     <footer>
         <nav>
-            <a href="../index.html">Home</a>
+            <a href="/">Home</a>
             <a href="looks.html">Looks</a>
             <a href="map.html">Map</a>
             <a href="freetime.html">Free time</a>
