--- a/html/map.html
+++ b/html/map.html
@@ -54,7 +54,7 @@
     </main>
     <footer>
         <nav>
-            <a href="../index.html">Home</a>
+            <a href="/">Home</a>
             <a href="looks.html">Looks</a>
             <a class="active" href="map.html">Map</a>
             <a href="freetime.html">Free time</a>
