--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     </main>
     <footer>
         <nav>
-            <a class="active" href="/">Home</a>
-            <a href="html/looks.html">Looks</a>
-            <a href="html/map.html">Map</a>
-            <a href="html/freetime.html">Free time</a>
-            <a href="html/goals.html">Goals</a>
+            <a href="/" class="active">Home</a>
+            <a href="/looks">Looks</a>
+            <a href="/map">Map</a>
+            <a href="/freetime">Free time</a>
+            <a href="/goals">Goals</a>
         </nav>
     </footer>
     <div id="settings">
