--- a/goals/index.html
+++ b/goals/index.html
@@ -43,7 +43,7 @@
             <a href="/goals" class="active">Goals</a>
         </nav>
     </footer>
-    <div id="settings">
+    <div id="settings" onclick="$('#settings').stop(true).fadeOut()">
         <header>
             <h1>Settings</h1>
             <button id="toggleSettings" onclick="toggleSettings()">
