--- a/looks/index.html
+++ b/looks/index.html
@@ -34,7 +34,7 @@
             <a href="/goals">Goals</a>
         </nav>
     </footer>
-    <div id="settings">
+    <div id="settings" onclick="$('#settings').stop(true).fadeOut()">
         <header>
             <h1>Settings</h1>
             <button id="toggleSettings" onclick="toggleSettings()">
