--- a/map/index.html
+++ b/map/index.html
@@ -61,7 +61,7 @@
             <a href="/goals">Goals</a>
         </nav>
     </footer>
-    <div id="settings" onclick="$('#settings').stop(true).fadeOut()">
+    <div id="settings">
         <header>
             <h1>Settings</h1>
             <button id="toggleSettings" onclick="toggleSettings()">
