--- a/freetime/index.html
+++ b/freetime/index.html
@@ -52,19 +52,19 @@
                     <h2>Play video games</h2>
                     <p class="dorm">OldSchool RuneScape</p>
                     <p class="home">Forager</p>
-                    <p class="home hasinfo" id="goi">Getting over it</p>
-                    <p class="info" id="goi">Speedrun PB: 3m:58.222s</p>
+                    <p class="home hasInfo" id="goi">Getting over it</p>
+                    <p class="info" id="goi">Speed run PB: 3m:58.222s</p>
                     <p class="info" id="goi">first run took me ~10h</p>
                     <p class="home">Just cause 4</p>
-                    <p class="home hasinfo" id="mc" href="javascript:info()">Minecraft</p>
-                    <p class="info" id="mc">I have my own ressource pack, <i>more or less</i></p>
+                    <p class="home hasInfo" id="mc" href="javascript:info()">Minecraft</p>
+                    <p class="info" id="mc">I have my own resource pack, <i>more or less</i></p>
                     <p class="home">GTA V</p>
-                    <p class="home hasinfo" id="csgo">CS:GO</p>
+                    <p class="home hasInfo" id="csgo">CS:GO</p>
                     <p class="info" id="csgo">somewhere between silver 1 and gold nova</p>
-                    <p class="home hasinfo" id="terr">Terraria</p>
+                    <p class="home hasInfo" id="terr">Terraria</p>
                     <p class="info" id="terr">I just need one more Achievement</p>
                     <p class="home">Subnautica</p>
-                    <p class="home hasinfo" id="vrc">VRChat</p>
+                    <p class="home hasInfo" id="vrc">VRChat</p>
                     <p class="info" id="vrc">I created an Avatar for it, too</p>
                 </div>
                 <div class="hobby home dorm" id="programs">
@@ -72,9 +72,9 @@
                     <p class="home dorm">Discord</p>
                     <p class="home dorm">WhatsApp</p>
                     <p class="home dorm">Twitter</p>
-                    <p class="home hasinfo" id="pain">paint.net stuff</p>
-                    <p class="info" id="pain">I edit my Minecraft ressource pack with that</p>
-                    <p class="home dorm hasinfo" id="prog">Programming</p>
+                    <p class="home hasInfo" id="pain">paint.net stuff</p>
+                    <p class="info" id="pain">I edit my Minecraft resource pack with that</p>
+                    <p class="home dorm hasInfo" id="prog">Programming</p>
                     <p class="info" id="prog">mainly Python</p>
                     <p class="info" id="prog">Java, soon, hopefully</p>
                     <p class="info" id="prog">to make my own OSRS client</p>
