--- a/goals/index.html
+++ b/goals/index.html
@@ -16,15 +16,15 @@
         </button>
     </header>
     <main>
-        <div id="timepassed"></div>
-        <div id="timeleft"></div>
+        <div id="timePassed"></div>
+        <div id="timeLeft"></div>
         <div id="fin-marker"></div>
         <div id="diff"></div>
         <input type="range" min="0" max="10000" id="tl-slider" oninput="slide()">
-        <h1 class="goal" id="abschluss">Finish my education with success</h1>
+        <h1 class="goal" id="graduate">Graduate</h1>
         <h1 class="goal" id="job">Find a Job</h1>
         <h2 class="goal" id="laptop">Get a Laptop to use in my dorm</h2>
-        <h2 class="goal" id="invhow">Find out how to invest</h2>
+        <h2 class="goal" id="invHow">Find out how to invest</h2>
         <h2 class="goal" id="invest">Invest</h2>
         <h2 class="goal" id="profit">Profit</h2>
         <h2 class="goal end">Go to another planet</h2>
