--- a/freetime/index.html
+++ b/freetime/index.html
@@ -41,7 +41,7 @@
             <div id="hobbies">
                 <div class="hobby home dorm" id="videos">
                     <h2>Watch videos</h2>
-                    <p class="home dorm">Creepypasta</p>
+                    <p class="home dorm">Creepy pasta</p>
                     <p class="home dorm">Informative videos</p>
                     <p class="home">Streams</p>
                     <p class="home dorm">Memes</p>
@@ -56,7 +56,7 @@
                     <p class="info" id="goi">Speed run PB: 3m:58.222s</p>
                     <p class="info" id="goi">first run took me ~10h</p>
                     <p class="home">Just cause 4</p>
-                    <p class="home hasInfo" id="mc" href="javascript:info()">Minecraft</p>
+                    <p class="home hasInfo" id="mc">Minecraft</p>
                     <p class="info" id="mc">I have my own resource pack, <i>more or less</i></p>
                     <p class="home">GTA V</p>
                     <p class="home hasInfo" id="csgo">CS:GO</p>
