--- a/looks/index.html
+++ b/looks/index.html
@@ -18,7 +18,7 @@
     <main>
         <section id="imgs">
             <div id="irl-img">
-                <img src="../assets/nothingHere.png" alt="only real bruhs know what I look like!">
+                <img src="../assets/nothingHere.png" alt="Only PogChamps know what I look like!">
             </div>
             <div id="wikiAvatar">
                 <img src="../assets/Avatar.png" alt="Avatar">
