those 2 are not related

--- a/goals/index.html
+++ b/goals/index.html
@@ -31,6 +31,8 @@
         <h2 class="goal end">Study Psychology / people / the mind / thoughts / human stuff</h2>
         <h2 class="goal end">Study Philosophy</h2>
         <h2 class="goal end">Learn and program AI</h2>
+        <h2 class="goal end">Go to Japan</h2>
+        <h2 class="goal end">Fire a gun</h2>
         <h2 class="goal end">Learn programming mixed with graphic design</h2>
         <h2 class="goal end">Learn more languages (both normal and programming)</h2>
     </main>
