--- a/freetime/index.html
+++ b/freetime/index.html
@@ -50,6 +50,7 @@
                 </div>
                 <div class="hobby home dorm" id="games">
                     <h2>Play video games</h2>
+                    <p class="home">Witcher 3</p>
                     <p class="dorm">OldSchool RuneScape</p>
                     <p class="home">Forager</p>
                     <p class="home hasInfo" id="goi">Getting over it</p>
@@ -69,7 +70,8 @@
                 </div>
                 <div class="hobby home dorm" id="programs">
                     <h2>Social media and more</h2>
-                    <p class="home dorm">Discord</p>
+                    <p class="home dorm" id="dc">Discord</p>
+                    <p class="info" id="dc">Fumo ᗜ˯ᗜ</p>
                     <p class="home dorm">WhatsApp</p>
                     <p class="home dorm">Twitter</p>
                     <p class="home hasInfo" id="pain">paint.net stuff</p>
