--- a/freetime/index.html
+++ b/freetime/index.html
@@ -70,9 +70,8 @@
                 </div>
                 <div class="hobby home dorm" id="programs">
                     <h2>Social media and more</h2>
-                    <p class="home dorm" id="dc">Discord</p>
+                    <p class="home dorm hasInfo" id="dc">Discord</p>
                     <p class="info" id="dc">Fumo ᗜ˯ᗜ</p>
-                    <p class="home dorm">WhatsApp</p>
                     <p class="home dorm">Twitter</p>
                     <p class="home hasInfo" id="pain">paint.net stuff</p>
                     <p class="info" id="pain">I edit my Minecraft resource pack with that</p>
