--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <section id="intro">
             <h1>I am xSkj.</h1>
-            <h2>I'm a software developer apprentice in my 
+            <h2>I'm a software developer trainee in my 
                 <a href="javascript:openProgBar()" title="...out of three">first&nbsp;year</a>
             </h2>
             <div id="progBarBox">
